# reflective

./: .clang-format  CMakeLists.txt  LICENSE
include/: reflective.hpp  toString.hpp
include/transformation/: Transformation.hpp  nlohmannJsonTransformation.hpp  treelikeString.hpp
test/: CMakeLists.txt  Record.hpp  nlohmannJsonTransformationTest.cpp  reflectiveTest.cpp  toStringTest.cpp  toTreelikeMultilineStringTest.cpp
